# ngx-trading-enigne

./: Cargo.toml  readme.md
research/: research.md
src/: main.rs
src/config/: default.toml  mod.rs
src/loader/: mod.rs
src/models/: mod.rs
src/pipeline/: mod.rs
src/scraper/: cleaner.rs  http_client.rs  mod.rs  parsers.rs
src/storage/: mod.rs
src/utils/: mod.rs
